src/test/ui/error-codes/E0119.stderr
error[E0119]: conflicting implementations of trait `MyTrait` for type `Foo`:
  --> $DIR/E0119.rs:13:1
   |
LL | impl<T> MyTrait for T {
   | --------------------- first implementation here
...
LL | impl MyTrait for Foo {
   | ^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `Foo`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0119`.
